--- a/browser/index.html
+++ b/browser/index.html
@@ -7,8 +7,9 @@
     <link href="/style.css" rel="stylesheet" />
     <script src="/angular/angular.js" defer></script>
     <script src="/js/module.js" defer></script>
-    <script src="/js/albums.js" defer></script>
-    <script src="/js/player.js" defer></script>
+    <script src="/js/album/album.controllers.js" defer></script>
+    <script src="/js/player/player.controller.js" defer></script>
+    <script src="/js/player/player.factory.js" defer></script>
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
