--- a/browser/index.html
+++ b/browser/index.html
@@ -35,6 +35,13 @@
               <a ui-sref="artists">ARTISTS</a>
             </h4>
           </section>
+          <hr>
+          <section>
+            <h4 class="text-muted">PLAYLISTS</h4>
+            <p>
+              <a class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
+            </p>
+          </section>
         </sidebar>
       </div>
 
