--- a/browser/index.html
+++ b/browser/index.html
@@ -7,6 +7,7 @@
     <link href="/style.css" rel="stylesheet" />
     <script src="/angular/angular.js" defer></script>
     <script src="/angular-ui-router/release/angular-ui-router.js" defer></script>
+    <script src="/angular-messages/angular-messages.js" defer></script>
     <script src="/js/module.js" defer></script>
     <script src="/js/album/album.controllers.js" defer></script>
     <script src="/js/album/album.factory.js" defer></script>
@@ -18,6 +19,10 @@
     <script src="/js/artist/artist.factory.js" defer></script>
     <script src="/js/artist/artist.states.js" defer></script>
     <script src="/js/song/song.factory.js" defer></script>
+    <script src="/js/song/song.controllers.js" defer></script>
+    <script src="/js/playlist/playlist.states.js" defer></script>
+    <script src="/js/playlist/playlist.factory.js" defer></script>
+    <script src="/js/playlist/playlist.controllers.js" defer></script>
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
@@ -36,10 +41,15 @@
             </h4>
           </section>
           <hr>
-          <section>
+          <section ng-controller="PlaylistsCtrl">
             <h4 class="text-muted">PLAYLISTS</h4>
+            <p ui-sref-active="active" ng-repeat="playlist in playlists" class="playlist-item">
+              <a ui-sref="playlist({playlistId: playlist._id })">
+                {{ playlist.name }}
+              </a>
+            </p>
             <p>
-              <a class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
+              <a ui-sref="newPlaylist" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-plus"></span> PLAYLIST</a>
             </p>
           </section>
         </sidebar>
