--- a/browser/index.html
+++ b/browser/index.html
@@ -43,7 +43,7 @@
           <hr>
           <section ng-controller="PlaylistsCtrl">
             <h4 class="text-muted">PLAYLISTS</h4>
-            <p ui-sref-active="active" ng-repeat="playlist in playlists" class="playlist-item">
+            <p ui-sref-active="active" ng-repeat="playlist in playlists" class="menu-item">
               <a ui-sref="playlist({playlistId: playlist._id })">
                 {{ playlist.name }}
               </a>
