--- a/browser/index.html
+++ b/browser/index.html
@@ -69,7 +69,7 @@
             </button>
           </div>
           <div class="bar">
-            <div class="progress">
+            <div class="progress" ng-click="handleProgressClick($event)">
               <div class="progress-bar" ng-style="{width: progress + '%'}"></div>
             </div>
           </div>
